pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference29.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(_): String = throw("not implemented")
}

local myRef = ref.Reference(new D {}, Listing, null)

res = myRef.name
